Add base url to load relative images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <base href="/">
+    <base href="/portafolio/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Antonio | Desarrollador de Software Full Stack</title>
     <meta name="theme-color" content="#211f1f">
