Fix typo on open graph tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nottechguy.github.io/portafolio/">
-    <meta property="og:title" content="Luis Antonio | Portfolio de Desarrollo de Software">
+    <meta property="og:title" content="Luis Antonio | Portafolio de Desarrollo de Software">
     <meta property="og:description" content="Portfolio profesional de Luis Antonio - Desarrollador Full Stack con experiencia en proyectos web complejos">
     <meta property="og:image" content="https://nottechguy.github.io/portafolio/img/cover_photo.png">
 
